# tf-binding-rs

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: motif-scanner.yml  rust.yml  tf-binding.yml
motif-scanner/: Cargo.toml  README.md
motif-scanner/src/: main.rs
src/: error.rs  fasta.rs  lib.rs  main.rs  occupancy.rs  types.rs
tests/: fasta_utils_tests.rs
tf-binding-rs/: Cargo.toml  readme.md
tf-binding-rs/src/: lib.rs  main.rs  occupancy.rs
tf-binding-rs/tests/data/: tdmMotifs.meme  test1.fasta
