[package]
name = "tf-binding-rs"
version = "0.1.3"
edition = "2021"
description = "Fast transcription factor binding site prediction and FASTA manipulation in Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.16.1"
polars = { version = "0.44.2", features = ["lazy"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
statrs = "0.17.1"
phf = {version = "0.11.2", features = ["macros"]}
