[package]
name = "motif-scanner"
version = "0.1.0"
edition = "2021"
description = "Command line tool for scanning DNA sequences for transcription factor binding sites"
authors = ["Jiayu Huang <hjiayu@wustl.edu>"]
license = "MIT"

[dependencies]
tf-binding-rs = { path = "../tf-binding-rs" }
clap = { version = "4.5.21", features = ["derive", "color"] }
polars = { version = "0.44.2", features = ["lazy", "csv", "strings", "regex"] }
thiserror = "2.0.3"
