[package]
name = "motif-scanner"
version = "0.1.0"
edition = "2021"
description = "Command line tool for scanning DNA sequences for transcription factor binding sites"
authors = ["Jiayu Huang <hjiayu@wustl.edu>"]
license = "MIT"

[dependencies]
tf-binding-rs = { version = "0.1.4", path = "../tf-binding-rs" }
clap = { version = "4.5.23", features = ["derive", "color"] }
polars = { version = "0.45.1", features = ["lazy", "csv", "strings", "regex", "parquet"] }
thiserror = "2.0.8"
rayon = "1.5.1"
